@@ -210,7 +210,7 @@
 
 #search_trend
 <div class="search_trend_wrap">	<!--	Trending search	-->
-  <span>Trending</span><a href="?aids=COVID-19#view=main">COVID-19</a><a href="?text_search=ebola#view=main">Ebola</a><a href="?text_search=hurricane dorian#view=main">Hurricane Dorian</a><a href="?text_search=locust#view=main">Locust</a><a href="?text_search=earthquake#view=main">Earthquake</a><a href="?text_search=tsunami#view=main">Tsunami</a><a href="?text_search=malaria#view=main">Malaria</a>
+  <span>Trending</span><a href="?aids=COVID-19#view=main" class="now">COVID-19</a><!--<a href="?text_search=ebola#view=main">Ebola</a><a href="?text_search=hurricane dorian#view=main">Hurricane Dorian</a><a href="?text_search=locust#view=main">Locust</a><a href="?text_search=earthquake#view=main">Earthquake</a><a href="?text_search=tsunami#view=main">Tsunami</a><a href="?text_search=malaria#view=main">Malaria</a>-->
 </div>
 	
 <!-- SEARCH2: Toggle search intro section, hidden at load / GLOSSARY	-->
@@ -223,7 +223,11 @@
 			<thead>
 				<tr>
 					<th class="gloss_name">Trending</th>
-					<th>Quick buttons for keyword search in Title fields only.</th>
+					<th>Quick buttons for trending topics.
+					<div>
+						The COVID-19 search follows the <a href="https://docs.google.com/document/d/11XTnrPw8K76JvBhFfnqo-1Z9BmgqzWv2bEz9QoDrw2k">IATI Publishing Guidance</a>. It currently searches the database for COVID-19 in title and description fields and looks for the relevant codes in the humanitarian-scope element.
+					</div>
+					</th>
 				</tr>
 			</thead>
 			<tr>
@@ -318,7 +322,7 @@
 				<td>{search_year_txt}</td>
 				<td>Select the starting and/or ending year as the range for activities.</td>
 			</tr>
-			<tr>
+			<!--<tr>
 				<td>{search_keyword_txt}</td>
 				<td>Search Title fields only within all published IATI activities.</td>
 			</tr>
@@ -326,7 +330,7 @@
 				<td>{search_external_txt}</td>
 				<td>View a specific set of activities in d-portal by typing in their identifiers here separated by comma <span class="underline"><b>or</b></span>
 					<br/>Paste the URL of IATI identifiers in JSON or CSV format to view the activities in d-portal.</td>
-			</tr>
+			</tr>-->
 		</table>
 	</div>
 </div>
@@ -334,7 +338,7 @@
 <!-- SEARCH2: Wrapper for entire search section	-->
 #view_search_test2
 <div id="view_search_test" style="padding-top:0; margin-top:-10px;">
-	<div class="search_help"><span onclick="$('#more_search_intro').slideToggle('fast');">? HELP</span></div>
+	<div class="search_help"><span onclick="$('#more_search_intro').slideToggle('fast');">GLOSSARY</span></div>
 	{view_search_filters_wrap2}
 	<div id="search_div">
 		<span id="addfilter_span"></span><span id="result_span"></span><a id="search_link" class="search_link_disable">{search_button1_txt}</a> <!--Update to button1, translations-->
