@@ -856,6 +856,8 @@ What is the data in the dropdown lists within filters?
 <p>The numeric codes and names within the <a href="http://iatistandard.org/202/codelists/ActivityStatus/">IATI activity status</a> field.</p>
 <p><b>Year Range</b></p>
 <p>Years from 1960 to ‘present year + 2’.</p>
+<p><b>More filters</b></p>
+<p>The numeric codes and names within the <a href="http://iatistandard.org/202/codelists/ActivityStatus/">IATI activity status</a> field.</p>
 
 #^faq_explore_q5_text
 How can I use and refine the freetext search?
@@ -882,6 +884,12 @@ Do plural nouns work in freetext search?
 
 #^faq_explore_a8_text
 EXPLORE is adapted for English plural nouns - e.g. typing ‘<i>Refugee</i>’ will include results for ‘<i>Refugees</i>’.
+
+#^faq_explore_q9_text
+How does the Trending buttons work?
+
+#^faq_explore_a9_text
+The <b>COVID-19</b> button follows the <a href="https://docs.google.com/document/d/11XTnrPw8K76JvBhFfnqo-1Z9BmgqzWv2bEz9QoDrw2k">IATI Publishing Guidance</a>. It currently searches the database for COVID-19 in title and description fields and looks for the relevant codes in the <b>humanitarian-scope</b> element.
 
 #^faq_generator_q1_text
 What is it?
