@@ -406,6 +406,7 @@
 			<li><a href="#explore6">{faq_explore_q6_text}</a></li>
 			<li><a href="#explore7">{faq_explore_q7_text}</a></li>
 			<li><a href="#explore8">{faq_explore_q8_text}</a></li>
+			<li><a href="#explore9">{faq_explore_q9_text}</a></li>
 		</ul>
 	</div>
 	
@@ -464,6 +465,13 @@
 			<span class="list">{faq_explore_q8_text}</span>
 			<span class="info">
 				{faq_explore_a8_text}
+			</span>
+		</li>
+		<li>
+			<span id="explore9"></span>
+			<span class="list">{faq_explore_q9_text}</span>
+			<span class="info">
+				{faq_explore_a9_text}
 			</span>
 		</li>
 	</ul>
