@@ -872,6 +872,12 @@ Est-il possible d’effectuer une recherche avec des noms au pluriel dans les te
 #^faq_explore_a8_text
 L’outil EXPLORE est adapté aux noms au pluriel en anglais. Par exemple, en écrivant « <i>réfugié</i> », « <i>réfugiés</i> » sera compris dans les résultats.
 
+#^faq_explore_q9_text
+How does the Trending buttons work?
+
+#^faq_explore_a9_text
+The <b>COVID-19</b> button follows the <a href="https://docs.google.com/document/d/11XTnrPw8K76JvBhFfnqo-1Z9BmgqzWv2bEz9QoDrw2k">IATI Publishing Guidance</a>. It currently searches the database for COVID-19 in title and description fields and looks for the relevant codes in the <b>humanitarian-scope</b> element.
+
 #^faq_generator_q1_text
 De quoi s’agit-il?
 
