@@ -1,3 +1,9 @@
+Static site (2020-04-18 shi)
+==============================
+Update FAQ with explore 9 about more filters and trending buttons
+Update other languages, french will be out of date
+
+
 Static site (2020-01-31 shi)
 ==============================
 Update FAQ text for general 13 about data not showing on d-portal
