@@ -1,3 +1,10 @@
+Development Portal (2020-04-18 shi)
+==============================
+Update glossary
+Hide extra filter options for now
+Hide other trending buttons for now
+
+
 Development Portal (2020-04-17 shi)
 ==============================
 Update more filters css
